--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,25 @@
 # content of: tox.ini , put in same dir as setup.py
+;[tox]
+;envlist = py27
+;
+;[testenv]
+;deps = -r{toxinidir}/dev-requirements.txt
+;setenv =
+;PYTHONPATH = {toxinidir}:{toxinidir}
+;#deps=pytest       # install pytest in the venvs
+;commands=py.test  # or 'nosetests' or ...
 [tox]
-envlist = py27
+envlist =
+    {py27,py34}-django{18}
 
 [testenv]
-deps = -r{toxinidir}/dev-requirements.txt
+basepython =
+    py27: python2.7
+    py34: python3.4
 setenv =
-PYTHONPATH = {toxinidir}:{toxinidir}
-#deps=pytest       # install pytest in the venvs
-commands=py.test  # or 'nosetests' or ...
+    PYTHONPATH = {toxinidir}::{toxinidir}
+deps =
+    -r{toxinidir}/dev-requirements.txt
+
+[flake8]
+ignore = E501
