--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,23 @@
-# content of: tox.ini , put in same dir as setup.py
-;[tox]
-;envlist = py27
-;
-;[testenv]
-;deps = -r{toxinidir}/dev-requirements.txt
-;setenv =
-;PYTHONPATH = {toxinidir}:{toxinidir}
-;#deps=pytest       # install pytest in the venvs
-;commands=py.test  # or 'nosetests' or ...
 [tox]
 envlist =
-    py27,py34
+    {py27,py34}-django{18}
 
 [testenv]
 basepython =
     py27: python2.7
     py34: python3.4
 setenv =
-    PYTHONPATH = {toxinidir}::{toxinidir}
+    PYTHONPATH = {toxinidir}
+commands =
+    make install-quite
+    pip freeze
+    make check
 deps =
-    -r{toxinidir}/dev-requirements.txt
+    django16: django<1.7
+    django17: django<1.8
+    django18: django<1.9
+whitelist_externals =
+    make
 
 [flake8]
 ignore = E501
