--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ sudo: false
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - pip install $DJANGO
-  - pip install -r requirements-dev.txt
+  - pip install -r dev-requirements.txt
   - pip install coveralls
   - pip freeze
 
 # command to run tests, e.g. python setup.py test
-script: make check
+script: tox
 
 after_success: coveralls
