--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 [tox]
 envlist =
-    {py27,py34}-django{18}
+    {py27,py34,pypy,pypy3}-django{18}
 
 [testenv]
 basepython =
     py27: python2.7
     py34: python3.4
+    pypy: pypy
+    pypy3: pypy3
 setenv =
     PYTHONPATH = {toxinidir}
 commands =
@@ -20,4 +22,4 @@ whitelist_externals =
     make
 
 [flake8]
-ignore = E501
+ignore = E501s
