--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ install:
   - pip freeze
 
 # command to run tests, e.g. python setup.py test
+script: python setup.py test
 
 after_success: coveralls
