--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
-current_version = 0.0.0
+current_version = 0.1.0
 commit = True
 tag = True
 
-[bumpversion:file:setup.py]
+[bumpversion:file:drf_gen/__init__.py]
