--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: false
 
 install:
 - pip install $DJANGO
-- pip install -r dev-requirements.txt
+- pip install -r requirements.txt
 - pip install coveralls
 - pip freeze
 
